[package]
name = "log_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.219", features = [ "derive" ] }
rerun = { version = "0.29.2", features = ["clap"] }
anyhow = "1.0.101"
clap = { version = "4.5.58", features = [ "derive" ] }
itertools = "0.14.0"
chrono = "0.4.43"
rust-ocpp = { version = "3.0.4", features = ["v1_6", "v2_0_1"] }
